# flask-notes-app

./: .gitignore  README.md  main.py  pyproject.toml
webapp/: __init__.py  auth.py  models.py  views.py
webapp/static/: index.js  style.css
webapp/templates/: base.html  editNote.html  home.html  login.html  signUp.html
