[tool.poetry]
name = "flask-notes-app"
version = "0.1.0"
description = ""
authors = ["Shounak Dey <shounakdey@ymail.com>"]
readme = "README.md"
packages = [{include = "flask_notes_app"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
